--- a/yoga.css
+++ b/yoga.css
@@ -1,14 +1,75 @@
 body,html{
     height: 100%;
     margin: 0;
+    background-image: "./yoga-bg1.jpg";
 }
-.container{
-    margin: 0;
-    background-image: url("https://media.giphy.com/media/bmxPyUwvWvCne/giphy.gif");
-    height: 100%;
 
-    /* Center and scale the image nicely */
+.container{
+    position: relative;
+    text-align: center;
+    color: white;
+}
+
+.text-block {
+    position: absolute;
+    top: 8px;
+    left: 16px;
+    color: white;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: 2rem;
+  }
+
+.card-image{
+    vertical-align: middle;
+    width: 10rem;
+    height: 10rem;
+    border-radius: 50%;
+}
+
+
+.bg-image{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    height: fit-content;
 }
+.column {
+    float: left;
+    width: 30%;
+    padding: 0 10px;
+  }
+  
+  /* Remove extra left and right margins, due to padding */
+  .row {
+      margin-left: 2%;
+      position: absolute;
+      bottom: 0px;
+    right: 16px;
+        top:100%;
+    }
+  
+  /* Clear floats after the columns */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+  /* Responsive columns */
+  @media screen and (max-width: 600px) {
+    .column {
+      width: 100%;
+      display: block;
+      margin-bottom: 20px;
+    }
+  }
+  
+  /* Style the counter cards */
+  .card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    padding: 16px;
+    text-align: center;
+    background-color: #f1f1f1;
+  }
+  
