--- a/yoga.css
+++ b/yoga.css
@@ -14,10 +14,11 @@ body,html{
     position: absolute;
     top: 8px;
     left: 16px;
-    color: white;
+    color: black;
     padding-left: 20px;
     padding-right: 20px;
     font-size: 2rem;
+    text-align: center;
   }
 
 .card-image{
@@ -70,6 +71,7 @@ body,html{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     padding: 16px;
     text-align: center;
-    background-color: #f1f1f1;
+    background-color: #A78BFA;
+    border-radius: 1rem;
   }
   
