--- a/yoga.css
+++ b/yoga.css
@@ -71,7 +71,8 @@ body,html{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     padding: 16px;
     text-align: center;
-    background-color: #A78BFA;
+    background-color: rgb(78, 21, 109);
+    color: white;
     border-radius: 1rem;
   }
   
