--- a/WeightLossFolder/weightLoss.css
+++ b/WeightLossFolder/weightLoss.css
@@ -8,9 +8,9 @@ body,html{
 }
 
 .navigation {
-  background-color: #6366F1;
+  background-color: #FB923C;
   padding: 2rem 2rem;
-  color: white;
+  color: black;
   font-size: larger;
   font-weight: bold;
 }
@@ -22,8 +22,8 @@ body,html{
     /* background-image-width: 600px; */
 
     position: relative;
-  text-align: center;
-  color: black;
+    text-align: center;
+    color: black;
 
     /* Center and scale the image nicely */
     /* background-position: center;
@@ -38,7 +38,7 @@ body,html{
   padding: 0.5rem 5rem;
   font-size: 1.5rem;
   color : black;
-  font-weight: bold;
+  /* font-weight: bold; */
   
 }
 
@@ -82,7 +82,7 @@ body,html{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     padding: 16px;
     text-align: center;
-    background-color: #FCE7F3;
+    background-color: #A5F3FC;
     border-radius: 0.5rem;
   }
 
@@ -91,17 +91,17 @@ body,html{
   }
 
   .footer {
-    background-color: #7C3AED;
+    background-color: #FB923C;
     padding: 2rem 0rem;
     border-top-right-radius: 1rem;
-    color: white;
+    color: black;
     text-align: center;
-    text-size: large;
+    font-size: larger;
     margin-bottom: 0%;
     position: absolute;
     bottom: 8px;
     right: 16px;
-    top: 180%;
+    top: 200%;
     width: 100%;
     height: 3rem;    
   }
@@ -121,7 +121,7 @@ body,html{
   }
 
   .footer .sm{
-    color: white;
+    color: black;
   }
 
   .container-head {
@@ -136,4 +136,24 @@ body,html{
   width: 10rem;
   height: 10rem;
   border-radius: 50%;
+}
+
+.button {
+  background-color: black;
+  border: 2px solid white;
+  border-radius: 1rem;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  font-size: 16px;
+  margin: 4px 2px;
+  opacity: 0.6;
+  transition: 0.3s;
+  display: inline-block;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.button:hover {
+  opacity: 1
 }
