--- a/yoga.css
+++ b/yoga.css
@@ -101,15 +101,15 @@ body,html{
   }
 
   .navigation {
-    background-color: #44318D;
+    background-color: rgb(78, 21, 109);
     padding: 2rem 2rem;
-    color: #292524;
+    color: white;
     font-size: larger;
     font-weight: bold;
   }
 
   .footer {
-    background-color:#44318D;
+    background-color:rgb(78, 21, 109);
     padding: 2rem 1rem;
     border-top-right-radius: 1rem;
     border-top-left-radius: 1rem;
