--- a/yoga.css
+++ b/yoga.css
@@ -1,10 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;500&display=swap');
+
 body,html{
+    font-family: 'Fira Sans', sans-serif;
     height: 100%;
     margin: 0;
     background-image: "./yoga-bg1.jpg";
 }
 
-.container{
+.container1{
     position: relative;
     text-align: left;
     color: white;
@@ -12,7 +15,7 @@ body,html{
 
 .text-block {
     position: absolute;
-    top: 120px;
+    top: 0px;
     left: 16px;
     color: black;
     padding-left: 20px;
@@ -102,10 +105,10 @@ body,html{
 
   .navigation {
     background-color: rgb(78, 21, 109);
-    padding: 2rem 2rem;
-    color: white;
-    font-size: larger;
+    color: black;
+    font-size: 1.5rem;
     font-weight: bold;
+    padding:1rem 1rem;
   }
 
   .footer {
