--- a/meditation-folder/meditation.css
+++ b/meditation-folder/meditation.css
@@ -96,7 +96,7 @@ body,html{
     padding: 2rem 1rem;
     border-top-right-radius: 1rem;
     border-top-left-radius: 1rem;
-    color: white;
+    color: black;
     text-align: center;
     font-size: large;
     margin-bottom: 0%;
@@ -124,7 +124,7 @@ body,html{
   }
 
   .footer .sm{
-    color: white;
+    color: black;
   }
 
   .container-head {
