--- a/WeightLossFolder/weightLoss.css
+++ b/WeightLossFolder/weightLoss.css
@@ -5,6 +5,11 @@ body,html{
   font-family: 'Fira Sans', sans-serif;
     height: 100%;
     margin: 0;
+    width: 100%;
+    height: 100%;
+    padding: 0px;
+    margin: 0px; 
+    /* overflow-x: hidden; */
 }
 
 .navigation {
@@ -100,7 +105,7 @@ body,html{
     margin-bottom: 0%;
     position: absolute;
     bottom: 8px;
-    right: 16px;
+    right: -1px;
     top: 200%;
     width: 100%;
     height: 3rem;    
