--- a/meditation-folder/meditation.css
+++ b/meditation-folder/meditation.css
@@ -2,9 +2,13 @@
 
 
 body,html{
-  font-family: 'Fira Sans', sans-serif;
+    font-family: 'Fira Sans', sans-serif;
     height: 100%;
     margin: 0;
+    width: 100%;
+    height: 100%;
+    padding: 0px;
+    margin: 0px; 
 }
 
 .navigation {
@@ -93,20 +97,18 @@ body,html{
 
   .footer {
     background-color: #FB923C;
-    padding: 2rem 1rem;
+    padding: 2rem 0rem;
     border-top-right-radius: 1rem;
-    border-top-left-radius: 1rem;
     color: black;
     text-align: center;
-    font-size: large;
+    font-size: larger;
     margin-bottom: 0%;
-    margin-right: 0%;
     position: absolute;
-    /* bottom: 8px;
-    right: -3px; */
+    bottom: 8px;
+    right: -1px;
     top: 200%;
     width: 100%;
-    height: 3rem;    
+    height: 3rem;   
   }
 
   .footer .footer-header {
