--- a/yoga.css
+++ b/yoga.css
@@ -4,7 +4,10 @@ body,html{
     font-family: 'Fira Sans', sans-serif;
     height: 100%;
     margin: 0;
-    background-image: "./yoga-bg1.jpg";
+    width: 100%;
+    height: 100%;
+    padding: 0px;
+    margin: 0px; 
 }
 
 .container1{
@@ -113,18 +116,16 @@ body,html{
 
   .footer {
     background-color:rgb(78, 21, 109);
-    padding: 2rem 1rem;
+    padding: 2rem 0rem;
     border-top-right-radius: 1rem;
-    border-top-left-radius: 1rem;
-    color: white;
+    color: black;
     text-align: center;
-    font-size: large;
+    font-size: larger;
     margin-bottom: 0%;
-    margin-right: 0%;
     position: absolute;
-    /* bottom: 8px;
-    right: -3px; */
-    top: 180%;
+    bottom: 8px;
+    right: -1px;
+    top: 200%;
     width: 100%;
     height: 3rem;    
   }
